--- a/css/SpeakingAlphabet.css
+++ b/css/SpeakingAlphabet.css
@@ -23,7 +23,7 @@ html , body{
 .row {
   width:100%;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content:space-between;
   align-items: center; 
 }
 
