--- a/css/SpeakingAlphabet.css
+++ b/css/SpeakingAlphabet.css
@@ -484,6 +484,7 @@ input[type="file"] {
   button{
     background-size: 17px;
     background-position: 10% 49%;
+    padding: 7% 34%;
   }
   .shuffle-color-figure{
     padding-left:7%;
@@ -603,7 +604,7 @@ input[type="file"] {
 
   }
   .sidenave-open {
-    width: 65vw;
+    width: 70vw;
   }
   label {
     font-size: 0.7rem;
